--- a/css/cover.css
+++ b/css/cover.css
@@ -27,7 +27,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background: #333 url('../img/Wikipedia-logo-v2.svg.png') bottom -100px right no-repeat;
+  background: #333 url('../img/Wikipedia-logo-v2.svg.png') bottom -100px right no-repeat fixed;
 }
 body {
   color: #fff;
